# ALF_2.5_Personal

./: .gitignore  .gitlab-ci.yml  BRAINSTORMING.md  BRANCH_INFO.md  CHANGELOG  CHANGELOG.md  CITATION  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CONTRIBUTING.md~  JobfileJURECA.sh  JobfileSuperMUC-NG.sh  JobfileSuperMUC.sh  Makefile  MakefileHPC  MakefileSuperMUC  Notes_8.txt  README.md  README_OLD.md  ROADMAP.md  RUNNING  check_libs.f90  configure.sh  configureHPC.sh  files_for_arxiv2.sh  get_compiler_version.F90  license.additional  pgi_bug.F90  roadmap.md  set_env.sh  setenv.sh  temp1.tex~  todo_list_documentation
Analysis/: Compile_Max  Compile_Max_T0  Compile_Max_ph  Compile_cov  Compile_en  Compile_eq  Compile_scal  Makefile  Max_SAC.F90  Max_SAC.f90  Max_SAC_T0.f90  Max_SAC_ph.F90  Max_SAC_ph.f90  Predefined_Latt_mod.F90  Rep.sh  ana.F90  ana_hdf5.F90  ana_mod.F90  copy_parameters.py  cov_eq.F90  cov_eq.f90  cov_mut.F90  cov_scal.F90  cov_scal.f90  cov_tau.F90  cov_tau.f90  repack_latt.F90
Analysis_7/: Compile_cov  cov_eq.f90
Analysis_8/: .#cov_eq.f90  Compile_Max  Compile_Max_ph  Compile_eq  Compile_scal  Makefile  Makefile_v05  Max_SAC.f90  Max_SAC_ph.f90  cov_eq.f90  cov_scal.f90  cov_tau.f90  jackv5.f90
DFG/: Assaad_ALF.tex  Cover.docx
Documentation/: .gitignore  Doc.idx  Doc.toc  Hubbard_Plain.tex  Kondo_SUN.tex  LRC.tex  Model_classes.tex  SciPostPhysCodeb_Template.tex  Z2_Matter.tex  Z2_Slave.tex  acknowledgment.tex  analysis.tex  caveats.tex  conclusion.tex  dimer_and_cotunneling.tex  doc.bbl  doc.bib  doc.tex  fassaad.bib  files.tex  files_for_arxiv.sh  generic_hopping.tex  hmc.tex  hopping.tex  implementation.tex  interaction_vertices.tex  intro.tex  langevin.tex  license.tex  maxent.tex  model.tex  other_models.tex  performance.tex  pqmc.tex  prXsty.bst  predefined.tex  predefined_lattices.tex  predefined_observables.tex  pseudocode.tex  renyi.tex  (+9 more)
HDF5/: install_hdf5.sh
Images/: Hamiltonian0.tex  Hamiltonian1.tex
Libraries/: Makefile
Mathematica/: Cotunneling_SU2_NFL_1.F90  Cotunneling_SU2_NFL_1.nb  Cotunneling_SU2_NFL_2.nb  Cotunneling_SU2_NF_2  Cotunneling_SUN_NFL_1.nb  Dimer-Dimer_SU2_NFL_2.nb  Dimer-Dimer_SUN_NFL_1.nb
Prog/: Bid_N2.f90  Bid_N3.f90  Bid_N4.f90  Compile_Examples  Compile_Hub  Compile_Hub_Can  Compile_Hub_Ising  Compile_Ising  Compile_Kondo_Honey  Compile_NematicDirac  Compile_SPT  Compile_Z2_Slave  Compile_Z2_slave  (+98 more)
src/Modules/: CMakeLists.txt  Files_mod.f90  maxent_stoch_w.f90
src/MyEis/: CMakeLists.txt  balbak.f  cbal.f  cg.f  epslon.f  hqr.f  htribk.f  htridi.f  tqlrat.f
src/MyNag/: CMakeLists.txt
src/Prog/: CMakeLists.txt  Hamiltonian_SPT.f90  cgr1.f90  outconfc.f90  upgrade.f90
testsuite/: CMakeLists.txt
testsuite/1-diag_real_matrix/: main.f90
testsuite/4-inv_R_variable_1/: main.f90
testsuite/5-inv_r1/: main.f90
testsuite/8-inv_C1/: main.f90
testsuite/9-inv_C1/: main.f90
testsuite/Prog.tests/: 1-copy-sel-rows.F90  1-copy-sel-rows.f90  10-Op-mmultL.F90  10-Op-mmultL.f90  11-Op-mmultR.F90  11-Op-mmultR.f90  12-get-matrix-blocks.F90  12-get-matrix-blocks.f90  13-Op-Wrapup.F90  13-Op-Wrapup.f90  14-Op-Wrapdo.F90  14-Op-Wrapdo.f90  15-cgr.F90  15-cgr.f90  16-get-blocks.F90  16-get-blocks.f90  17-solve-extended-system.F90  17-solve-extended-system.f90  18-ul-update-matrices.F90  18-ul-update-matrices.f90  19-ur-update-matrices.f90  2-copy-sel-columns.F90  2-copy-sel-columns.f90  20-qdrp.F90  20-qdrp.f90  21-Op-make.F90  21-Op-make.f90  21-sl-mat-mults.F90  21-sl-mat-mults.f90  23-cgrp.F90  23-cgrp.f90  24-udv.F90  25-assign-UDV-state.f90  26-Test-Polymorphic-Fortran.F90  3-opmult.F90  3-opmult.f90  4-opmultct.F90  4-opmultct.f90  5-FillExpOps.f90  6-opexpmult-1.F90  (+13 more)
testsuite/Prog.tests/16-UDV/: Makefile  UDV_WRAP_Testing.F90
testsuite/Prog.tests/18-UDV/: Compile  main.f90
testsuite/Prog/1-copy-sel-rows/: main.f90
testsuite/Prog/10-Op_mmultL/: main.f90
testsuite/Prog/11-Op_mmultR/: main.f90
testsuite/Prog/12-get_matrix_blocks/: main.f90
testsuite/Prog/13-Op-Wrapup/: main.f90
testsuite/Prog/13-UDV/: UDV_WRAP_Testing.f90
testsuite/Prog/14-Op-Wrapdown/: main.f90
testsuite/Prog/15-cgr/: main.f90
testsuite/Prog/2-copy-sel-columns/: main.f90
testsuite/Prog/3-opmult/: main.f90
testsuite/Prog/4-opmultct/: main.f90
testsuite/Prog/5-FillExpOps/: main.f90
testsuite/Prog/6-opexpmult/: test1.f90  test2.f90
testsuite/Prog/7-opexpmultct/: test1.f90  test2.f90
testsuite/Prog/8-scalematrix/: test1.f90  test2.f90
testsuite/Prog/9-Op_phase/: main.f90
testsuite/Prog/unsorted/: maxval.f90
testsuite/mat_mod/10-initd_C/: main.f90
testsuite/mat_mod/11-ct/: main.F90
testsuite/mat_mod/2-inv_r0/: main.f90
testsuite/mat_mod/3-inv_R_variable/: main.f90
testsuite/mat_mod/5-inv_r1/: main.f90
testsuite/mat_mod/6-inv_c/: main.f90
testsuite/mat_mod/7-inv_C_variable/: main.f90
testsuite/mat_mod/9-inv_C1/: main.f90
testsuite/matmod.tests/: 1-diag-real-matrix.F90  1-diag-real-matrix.f90  10-initd_C.F90  10-initd_C.f90  11-UDV-C.F90  11-UDV-C.f90  12-UDV-R.F90  12-UDV-R.f90  2-inv-r0.F90  3-inv-R-variable.F90  3-inv-R-variable.f90  4-inv-R-variable-1.F90  4-inv-R-variable-1.f90  5-inv-R1.F90  5-inv-R1.f90  6-inv_C.F90  6-inv_C.f90  7-inv_C_variable.F90  7-inv_C_variable.f90  8-inv-C1.F90  9-inv-C1_test2.F90  9-inv-C1_test2.f90  CMakeLists.txt
testsuite/tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  log.txt
testsuite/tests/Prog.tests/: 10-Op-mmultL  11-Op-mmultR  13-Op-Wrapup  14-Op-Wrapdo  15-cgr  16-get-blocks  17-solve-extended-system  18-ul-update-matrices  19-ur-update-matrices  20-qdrp  21-Op-make  22-sl-mat-mults  23-cgrp  24-udv  25-assign-UDV-state  9-Op-Phase  CTestTestfile.cmake  Makefile  cmake_install.cmake
testsuite/tests/Testing/Temporary/: CTestCostData.txt
testsuite/tests/matmod.tests/: 1-diag-real-matrix  10-initd_C  11-UDV-C  12-UDV-R  2-inv-r0  3-inv-R-variable  4-inv-R-variable-1  5-inv-R1  6-inv_C  7-inv_C_variable  8-inv-C1  9-inv-C1_test2  CTestTestfile.cmake  Makefile  cmake_install.cmake
(+1903 files in other folders)
