cmake_minimum_required(VERSION 2.8.11)
if(DEFINED ENV{ALF_FC})
  set(CMAKE_Fortran_COMPILER $ENV{ALF_FC})
endif()
if(DEFINED ENV{ALF_FLAGS_PROG})
  string(REPLACE " " ";" FLAG_LIST $ENV{ALF_FLAGS_PROG})
else()
  set(FLAG_LIST -cpp -O3 -ffree-line-length-none -ffast-math)
endif()
if(DEFINED ENV{ALF_LIB})
  string(REPLACE " " ";" LIB_LIST $ENV{ALF_LIB})
else()
  set(LIB_LIST ${CMAKE_CURRENT_SOURCE_DIR}/../Libraries/Modules/modules_90.a -llapack -lblas ${CMAKE_CURRENT_SOURCE_DIR}/../Libraries/libqrref/libqrref.a)
endif()
#message(${FLAG_LIST})
#message(${LIB_LIST})

Project(matmod.tests C Fortran)

add_subdirectory(matmod.tests)
add_subdirectory(Prog.tests)
enable_testing()
