# Eispack library
SET(NAG_src ${SRCNAG}/F01QCF.f
${SRCNAG}/F01QDF.f
${SRCNAG}/F01QEF.f
${SRCNAG}/F01RCF.f
${SRCNAG}/F01REF.f
${SRCNAG}/F06AAZ.f
${SRCNAG}/F06FBF.f
${SRCNAG}/F06FJF.f
${SRCNAG}/F06FRF.f
${SRCNAG}/F06HBF.f
${SRCNAG}/F06HRF.f
${SRCNAG}/F06QHF.f
${SRCNAG}/F06KJF.f
${SRCNAG}/F06THF.f
${SRCNAG}/P01ABF.f
${SRCNAG}/P01ABW.f
${SRCNAG}/P01ABZ.f
${SRCNAG}/P01ABY.f
${SRCNAG}/P01ACF.f
${SRCNAG}/X02AJF.f
${SRCNAG}/X04AAF.f
${SRCNAG}/X04BAF.f
)

ADD_LIBRARY(${MYNAG} STATIC ${NAG_src})
