cmake_minimum_required(VERSION 2.8.5)
Project(matmod.tests C Fortran)
find_package(LAPACK)

add_executable(1-copy-sel-rows 1-copy-sel-rows.f90)
add_executable(2-copy-sel-columns 2-copy-sel-columns.f90)
add_executable(3-opmult 3-opmult.f90)
add_executable(4-opmultct 4-opmultct.f90)
add_executable(5-FillExpOps 5-FillExpOps.f90)
add_executable(6-opexpmult-1 6-opexpmult-1.f90)
add_executable(6-opexpmult-2 6-opexpmult-2.f90)
add_executable(7-opexpmultct-1 7-opexpmultct-1.f90)
add_executable(7-opexpmultct-2 7-opexpmultct-2.f90)
add_executable(8-scalematrix-1 8-scalematrix-1.f90)
add_executable(8-scalematrix-2 8-scalematrix-2.f90)
add_executable(9-Op-Phase 9-Op-Phase.f90)
add_executable(10-Op-mmultL 10-Op-mmultL.f90)
add_executable(11-Op-mmultR 11-Op-mmultR.f90)
add_executable(12-get-matrix-blocks 12-get-matrix-blocks.f90)
add_executable(13-Op-Wrapup 13-Op-Wrapup.f90)
add_executable(14-Op-Wrapdo 14-Op-Wrapdo.f90)
add_executable(15-cgr 15-cgr.f90)

set_target_properties(${progtests} PROPERTIES COMPILE_FLAGS "-I ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/Modules/ -L ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/Modules/")

foreach(iter ${progtests})
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/Modules/modules_90.a )
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/MyNag/libnag.a)
target_link_libraries(${iter} ${LAPACK_LIBRARIES})
endforeach(iter)

enable_testing()
add_test(1-copy-sel-rows 1-copy-sel-rows)
add_test(2-copy-sel-columns 2-copy-sel-columns)
add_test(3-opmult 3-opmult)
add_test(4-opmultct 4-opmultct)
add_test(5-FillExpOps 5-FillExpOps)
add_test(6-opexpmult-1 6-opexpmult-1)
add_test(6-opexpmult-2 6-opexpmult-2)
add_test(7-opexpmultct-1 7-opexpmultct-1)
add_test(7-opexpmultct-2 7-opexpmultct-2)
add_test(8-scalematrix-1 8-scalematrix-1)
add_test(8-scalematrix-2 8-scalematrix-2)
add_test(9-Op-Phase 9-Op-Phase)
add_test(10-Op-mmultL 10-Op-mmultL)
add_test(11-Op-mmultR 11-Op-mmultR)
add_test(12-get-matrix-blocks 12-get-matrix-blocks)
add_test(13-Op-Wrapup 13-Op-Wrapup)
add_test(14-Op-Wrapdo 14-Op-Wrapdo)
add_test(15-cgr 15-cgr)
