cmake_minimum_required(VERSION 2.8.5)
Project(matmod.tests C Fortran)
find_package(LAPACK)

add_executable(1-copy-sel-rows 1-copy-sel-rows.f90)
add_executable(2-copy-sel-columns 2-copy-sel-columns.f90)
add_executable(3-opmult 3-opmult.f90)
add_executable(4-opmultct 4-opmultct.f90)
add_executable(5-FillExpOps 5-FillExpOps.f90)
add_executable(6-opexpmult-1 6-opexpmult-1.f90)
add_executable(6-opexpmult-2 6-opexpmult-2.f90)
add_executable(7-opexpmultct-1 7-opexpmultct-1.f90)
add_executable(7-opexpmultct-2 7-opexpmultct-2.f90)
#add_executable(8-scalematrix-1 8-scalematrix-1.f90)
#add_executable(8-scalematrix-2 8-scalematrix-2.f90)
add_executable(9-Op-Phase 9-Op-Phase.f90)
add_executable(10-Op-mmultL 10-Op-mmultL.f90)
add_executable(11-Op-mmultR 11-Op-mmultR.f90)
add_executable(13-Op-Wrapup 13-Op-Wrapup.f90)
add_executable(14-Op-Wrapdo 14-Op-Wrapdo.f90)
add_executable(15-cgr 15-cgr.f90)
add_executable(16-get-blocks 16-get-blocks.f90)
add_executable(17-solve-extended-system 17-solve-extended-system.f90)
add_executable(18-ul-update-matrices 18-ul-update-matrices.f90)
add_executable(19-ur-update-matrices 19-ur-update-matrices.f90)
add_executable(20-qdrp 20-qdrp.f90)
set(operatorparts 1-copy-sel-rows 2-copy-sel-columns 3-opmult 4-opmultct 5-FillExpOps 6-opexpmult-1 6-opexpmult-2 7-opexpmultct-1 7-opexpmultct-2 9-Op-Phase 10-Op-mmultL 11-Op-mmultR 13-Op-Wrapup 14-Op-Wrapdo)
set(cgr2_2tests 16-get-blocks 17-solve-extended-system)
#set(cgr2_1tests 8-scalematrix-1 8-scalematrix-2)
set(cgr1tests 15-cgr 20-qdrp)
set(udvstatetests 18-ul-update-matrices 19-ur-update-matrices)
set(progtests ${operatorparts} ${cgr1tests} ${cgr2_1tests} ${cgr2_2tests} ${udvstatetests})

set_target_properties(${progtests} PROPERTIES COMPILE_FLAGS "-Wall -I ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/Modules/ -I ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/ -L ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/Modules/")

foreach(iter ${operatorparts})
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/Operator.o)
endforeach(iter)

foreach(iter ${cgr2_2tests})
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/cgr2_2.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/UDV_WRAP.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/QDRP_decompose.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/udv_state.o)
endforeach(iter)

#foreach(iter ${cgr2_1tests})
#target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/cgr2_1.o)
#target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/UDV_WRAP.o)
#target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/cgr1.o)
#endforeach(iter)

foreach(iter ${cgr1tests})
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/cgr1.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/UDV_WRAP.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/QDRP_decompose.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/udv_state.o)
endforeach(iter)

foreach(iter ${udvstatetests})
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/UDV_WRAP.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/udv_state.o)
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Prog/QDRP_decompose.o)
endforeach(iter)


foreach(iter ${progtests})
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/Modules/modules_90.a )
target_link_libraries(${iter} ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/libqrref/libqrref.a)
target_link_libraries(${iter} ${LAPACK_LIBRARIES})
endforeach(iter)

enable_testing()
add_test(1-copy-sel-rows 1-copy-sel-rows)
add_test(2-copy-sel-columns 2-copy-sel-columns)
add_test(3-opmult 3-opmult)
add_test(4-opmultct 4-opmultct)
add_test(5-FillExpOps 5-FillExpOps)
add_test(6-opexpmult-1 6-opexpmult-1)
add_test(6-opexpmult-2 6-opexpmult-2)
add_test(7-opexpmultct-1 7-opexpmultct-1)
add_test(7-opexpmultct-2 7-opexpmultct-2)
#add_test(8-scalematrix-1 8-scalematrix-1)
#add_test(8-scalematrix-2 8-scalematrix-2)
add_test(9-Op-Phase 9-Op-Phase)
add_test(10-Op-mmultL 10-Op-mmultL)
add_test(11-Op-mmultR 11-Op-mmultR)
add_test(13-Op-Wrapup 13-Op-Wrapup)
set_tests_properties(13-Op-Wrapup PROPERTIES WILL_FAIL TRUE)
add_test(14-Op-Wrapdo 14-Op-Wrapdo)
add_test(15-cgr 15-cgr)
add_test(16-get-blocks 16-get-blocks)
add_test(17-solve-extended-system 17-solve-extended-system)
add_test(18-ul-update-matrices 18-ul-update-matrices)
add_test(19-ur-update-matrices 19-ur-update-matrices)
add_test(20-qdrp 20-qdrp)
