cmake_minimum_required(VERSION 2.8.11)
Project(matmod.tests C Fortran)

add_executable(1-diag-real-matrix 1-diag-real-matrix.F90)
add_executable(2-inv-r0 2-inv-r0.F90)
add_executable(3-inv-R-variable 3-inv-R-variable.F90)
add_executable(4-inv-R-variable-1 4-inv-R-variable-1.F90)
add_executable(5-inv-R1 5-inv-R1.F90)
add_executable(6-inv_C 6-inv_C.F90)
add_executable(7-inv_C_variable 7-inv_C_variable.F90)
add_executable(8-inv-C1 8-inv-C1.F90)
add_executable(9-inv-C1_test2 9-inv-C1_test2.F90)
add_executable(10-initd_C 10-initd_C.F90)
add_executable(11-UDV-C 11-UDV-C.F90)
add_executable(12-UDV-R 12-UDV-R.F90)
set (matmodtests 1-diag-real-matrix 2-inv-r0 3-inv-R-variable 4-inv-R-variable-1 5-inv-R1 6-inv_C 7-inv_C_variable 8-inv-C1 9-inv-C1_test2 10-initd_C 11-UDV-C 12-UDV-R)

foreach(iter ${matmodtests})
  foreach(iflag ${FLAG_LIST})
    target_compile_options(${iter} PRIVATE ${iflag})
 endforeach(iflag)
 target_link_libraries(${iter} ${LIB_LIST})
 target_include_directories(${iter} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../Libraries/Modules/)
endforeach(iter)

enable_testing()
add_test(1-diag-real-matrix 1-diag-real-matrix)
add_test(2-inv-r0 2-inv-r0)
add_test(3-inv-R-variable 3-inv-R-variable)
add_test(4-inv-R-variable-1 4-inv-R-variable-1)
add_test(5-inv-R1 5-inv-R1)
add_test(6-inv_C 6-inv_C)
add_test(7-inv_C_variable 7-inv_C_variable)
add_test(8-inv-C1 8-inv-C1)
add_test(9-inv-C1_test2 9-inv-C1_test2)
add_test(10-initd_C 10-initd_C)
add_test(11-UDV-C 11-UDV-C)
add_test(12-UDV-R 12-UDV-R)
